<resources>

    <string name="app_name">DuoApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_iniciar_sesion">INICIAR SESION</string>
    <string name="btn_registrarse">REGISTRARSE</string>
    <string name="text_cuenta">Cuenta</string>
    <string name="btn_restablecer_pass">Restablecer contrasena</string>
    <string name="text_misLike">Tus likes</string>
    <string name="historial_busquda">Historial de busquedas</string>
    <string name="configuracion_name">Mi perfil</string>
    <string name="my_perfil">Mi perfil</string>
    <string name="title_activity_inicio"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_text">Descripcion:</string>
    <string name="subir_imagenes">Subir foto</string>
    <string name="my_foto">Mi foto</string>
    <string name="compartir_foto">Publicar</string>
    <string name="ubicacion">Anadir ubicacion</string>
    <string name="hint_user_name">User name</string>
    <string name="action_signout">Cerrar Sesion</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_configure">Mi perfil</string>
    <string name="title_activity_maps">Map</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="hint_name">Name</string>
    <string name="informacion">Informacion</string>
    <string name="ver_publicacion">Ver publicaciones</string>
    <string name="my_name">Luis Rafael Geraldo</string>
    <string name="my_sector">Urbanizacion italia</string>
    <string name="no_publicacion">No tiene publicaciones</string>
    <string name="subiendo">Subiendo...</string>
    <string name="subiendo_publicacion">Subiendo foto a DuoApp</string>
    <string name="subio_correctamente">Se subio correctamente</string>
    <string name="btn_aceptar">ACEPTAR</string>
    <string name="user_name">User name:</string>
    <string name="user_email">Email</string>
    <string name="no_publicacion_home">No hay publicaciones para mostrar</string>
    <string name="descripcion_boton">Escribir aqui.....</string>
    <string name="tres_puntos">...</string>
</resources>
