<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgfondo"
    tools:context=".net.azurewebsites.acceso.RegistrarseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/text_app_name"
            android:text="@string/registrarse"
            style="@style/titulo_text"/>

        <EditText
            android:id="@+id/edit_text_correo"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            style="@style/edit_text"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_name"
            android:inputType="text"
            style="@style/edit_text"/>


        <EditText
            android:id="@+id/edit_text_password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            style="@style/edit_text"/>

        <Button
            android:id="@+id/btn_registrase"
            android:text="@string/btn_registrarse"
            android:layout_marginTop="40dp"
            style="@style/botones_style_primary"/>

        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:text="@string/btn_iniciar_sesion"
            android:layout_marginTop="8dp"
            style="@style/botones_style_blanco"/>
    </LinearLayout>
</ScrollView>