<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgfondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/text_descripcion"
                android:text="@string/descripcion_text"
                android:textSize="15sp"
                style="@style/text_view_style" />

            <RelativeLayout
                android:id="@+id/layout_descripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/roundescripcion"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imagen_arriba"
                    android:layout_width="@dimen/img_view_width"
                    android:layout_height="@dimen/img_view_height"
                    android:background="@color/colorBlanco"
                    android:padding="5dp"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edit_text_descripcion"
                    android:hint="@string/descripcion_boton"
                    style="@style/edit_descripcion" />
            </RelativeLayout>


            <TextView
                android:id="@+id/text_ubicacion"
                android:text="@string/ubicacion"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                style="@style/text_view_style"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/roundescripcion"
                android:padding="5dp"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/btn_ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion"
                    android:textColor="@color/colorNegro"
                    android:background="@color/colorBlanco"/>
            </RelativeLayout>

                <Button
                    android:id="@+id/btn_compartir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compartir_foto"
                    android:layout_marginTop="40dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorBlanco"/>
        </LinearLayout>
</ScrollView>