<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".net.azurewebsites.vista.InicioFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cv">

            <LinearLayout style="@style/linear_layout">

                <RelativeLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/user_foto_principal"
                            android:layout_width="@dimen/dimens_foto_logo"
                            android:layout_height="@dimen/dimens_foto_logo"
                            android:padding="5dp"
                            android:src="@drawable/ic_menu_camera"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/my_name"
                            android:textSize="15sp"
                            tools:ignore="RelativeOverlap"
                            style="@style/text_view_publicacion" />

                        <TextView
                            android:id="@+id/ubicacion_user"
                            android:layout_width="250dp"
                            android:layout_marginTop="28dp"
                            android:text="@string/my_sector"
                            android:textSize="10sp"
                            tools:ignore="RelativeOverlap,SmallSp"
                            style="@style/text_view_publicacion"/>

                        <ImageView
                                android:id="@+id/btn_config"
                                android:src="@drawable/share"
                                tools:ignore="ContentDescription"
                                style="@style/boton_configuracion" />

                    </RelativeLayout>

                    <ImageView
                    android:id="@+id/img_publicacion"
                    android:src="@drawable/imgfondo"
                    tools:ignore="ContentDescription"
                    style="@style/foto_publicacion" />

                <RelativeLayout
                    android:id="@+id/controles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_margin="5dp">

                    <CheckBox
                        android:id="@+id/like"
                        android:button="@drawable/check"
                        style="@style/check_box_action" />

                    <CheckBox
                        android:id="@+id/conocer"
                        android:button="@drawable/checkarchivar"
                        android:checked="false"
                        android:layout_marginLeft="40dp"
                        android:layout_marginStart="40dp"
                        style="@style/check_box_action"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/user_name_footer"
                        android:text="@string/descripcion_text"
                        style="@style/text_view_user_footer" />

                    <TextView
                        android:id="@+id/descripcion_publicacion"
                        android:text="@string/app_name"
                        tools:ignore="SmallSp"
                        style="@style/text_descripcion_publicacion" />
                </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>